@@ -22,6 +22,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #10242: unittest.TestCase.assertItemsEqual makes too many assumgptions
+  about input.
+
 - Issue #10611: SystemExit should not cause a unittest test run to exit.
 
 - Issue #6791: Limit header line length (to 65535 bytes) in http.client,
